<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.views.NewNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addNotesToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@color/forest_green"
        app:navigationIcon="@drawable/ic_baseline_note_add_24"
        app:titleTextAppearance="@color/material_on_background_emphasis_high_type"
        />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/shape_note"
        android:hint="@string/note_title"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/shape_note"
        android:hint="@string/note_description"
        android:minHeight="48dp"
        android:padding="10dp"
        android:gravity="top|start"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/btnAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:padding="18dp"
        app:icon="@drawable/ic_edit"
        app:iconGravity="textEnd"
        app:iconPadding="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"/>

</LinearLayout>